--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -61,12 +61,13 @@
   font-weight: 600;
 }
 
-.nav_links:hover {
-  color: white;
+.signup_form {
+  position: relative;
+  left: -50px;
 }
 
-#demo_login {
-  padding-left: 3px;
+.nav_links:hover {
+  color: white;
 }
 
 #loginnav {
@@ -75,11 +76,12 @@
   vertical-align: top;
   top: 5px;
   right: 5px;
-  font-size: 12px;
+  font-size: 13px;
   font-family: "Motiva Sans", Sans-serif;
 }
 
-#demo_login {
+.demo_login {
+  padding-left: 3px;
   text-decoration: none;
   color: #fff !important;
 }
@@ -99,6 +101,89 @@
   background-repeat: no-repeat;
 }
 
+#signup_page_content {
+  height: 80vh;
+  background: #212429;
+  display: flex;
+  justify-content: center;
+  color: #E9E9E9;
+  background-image: url("../../public/static/images/steamloginbg.jpg");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+#signup_form {
+  position: relative;
+  right: 150px;
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+  padding: 40px 20px 20px 20px;
+  background: radial-gradient(30% 40% at 40% 30%, rgba(33, 36, 41, .5) 0%, rgba(33, 36, 41, 0) 100%) #2124296e;
+}
+
+#signup_text {
+  padding-top: 45px;
+  position: relative;
+  right: 50px;
+  font-family: "Motiva Sans", Sans-serif;
+  text-transform: uppercase;
+  text-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  font-size: 34px;
+  color: #ffffff;
+  margin-bottom: 30px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+#sign_up_form {
+  color: #E9E9E9;
+  box-shadow: none;
+  outline: none;
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: normal;
+}
+
+.sign_up_button {
+  position: relative;
+  top: 10px;
+  padding: 5px 59px;
+  font-size: 15px;
+  line-height: 15px;
+  height: 37px;
+  font-family: "Motiva Sans", Sans-serif;
+  border-radius: 2px;
+  border: none;
+  color: #c3e1f8;
+  cursor: pointer;
+  background: transparent;
+  text-shadow: 1px 1px 0px rgb(0 0 0 / 30%);
+  background: linear-gradient( to right, #47bfff 5%, #1a44c2 60%);
+  box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+  background-position: 25%;
+  background-size: 330% 100%;
+  border-radius: 2px;
+}
+
+#login_checkbox {
+  position: relative;
+  top: 20px;
+}
+
+#fake_checkbox {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#robot_div {
+  display: flex;
+}
+
+#login_checkboxa {
+  position: relative;
+  top: 8px;
+}
+
 #signinform {
   width: 25%;
   font-family: "Motiva Sans", Sans-serif;
@@ -107,6 +192,7 @@
   padding: 40px 20px 20px 20px;
   background: radial-gradient(30% 40% at 40% 30%, rgba(33, 36, 41, .5) 0%, rgba(33, 36, 41, 0) 100%) #2124296e;
 }
+
 
 #signintext {
   font-family: "Motiva Sans", Sans-serif;
@@ -157,10 +243,11 @@
 
 #footer {
   font-family: Arial, Helvetica, sans-serif;
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
   padding: 16px 0 60px 0;
   margin: 0;
   background: #171a21;
