updated to cart carousel

--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -241,3 +241,11 @@
   color: #ffffff;
   text-decoration: none;
 }
+
+#cart-carousel-outside-div {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  /* align-items: center;
+  justify-items: center; */
+}
