--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -244,8 +244,28 @@
 
 #cart-carousel-outside-div {
   width: 100%;
-  height: 500px;
+  height: 400px;
   display: flex;
   /* align-items: center;
   justify-items: center; */
+  box-shadow: 0 0 5px #000;
+}
+
+/* background: #15212e; */
+/* background: url(/public/images/v6/spotlight_background.jpg?v=1) bottom center no-repeat; */
+#carousel-img {
+  object-fit: cover;
+  width: 100%;
+}
+
+#spotlight-content {
+  padding: 8px 16px 12px 16px;
+  color: #9099a1;
+  font-size: 12px;
+  position: relative;
+  bottom: 0;
+  width: 274px;
+  height: 500px;
+  margin: 1px;
+  z-index: 0;
 }
