--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -13,10 +13,11 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    overflow-y: scroll;
   }
 
 #modal-background {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
