--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -249,6 +249,7 @@
   /* align-items: center;
   justify-items: center; */
   box-shadow: 0 0 5px #000;
+  margin-bottom: 50px;
 }
 
 /* background: #15212e; */
@@ -256,16 +257,17 @@
 #carousel-img {
   object-fit: cover;
   width: 100%;
+  height: 360px;
 }
 
 #spotlight-content {
   padding: 8px 16px 12px 16px;
   color: #9099a1;
   font-size: 12px;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 274px;
   height: 500px;
   margin: 1px;
-  z-index: 0;
+  /* z-index: 0; */
 }
