--- a/react-app/src/components/Games/create.css
+++ b/react-app/src/components/Games/create.css
@@ -47,7 +47,7 @@ body .game-listing-form-container {
   /* background: radial-gradient(30% 40% at 40% 30%, rgba(33, 36, 41, .5) 0%, rgba(33, 36, 41, 0) 100%) #2124296e; */
 }
 
-.create_form, label {
+.create_form>label {
 
   max-width: 300px;
   border-radius: 3px;
