finished profile page

--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -62,3 +62,21 @@
     width: 25px;
     height: 25px;
 }
+
+
+/* screen shots container */
+.screen-shots{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25%;
+}
+.art-showcase-h2{
+    color: white;
+}
+#art-showcase-img{
+    width: 100%;
+    height: 100%;
+}
