--- a/react-app/src/components/Reviews/editstyles.css
+++ b/react-app/src/components/Reviews/editstyles.css
@@ -24,17 +24,18 @@
   overflow: hidden;
   display: flex;
   flex-direction: row;
+  padding-left: 3px;
 }
 
 .review-form-container .create_textbox {
   border: 1px solid #233c51;
   border-radius: 3px;
-  height: 132px;
-  width: 764px;
-  max-width: 800px;
+  height: 208px;
+  width: 550px;
+  max-width: 580px;
   background-color: #222b35;
   color: #d6d7d8;
-  padding: 10px 11px;
+  /* padding: 10px 11px; */
   font-size: 13px;
   font-family: "Motiva Sans", Sans-serif;
   font-weight: normal;
@@ -126,7 +127,7 @@
 }
 
 .btn-submit-review > span {
-  padding: 0 15px;
+  padding: 0 25px;
   font-size: 15px;
   line-height: 30px;
   display: block;
@@ -181,7 +182,6 @@
   padding-top: 10px;
 }
 
-
 .review-success-description {
   display: inline-flex;
   font-size: 14px;
@@ -193,10 +193,10 @@
 .thumb {
   margin-top: 10px;
 }
+
 .review-success-description > p {
   padding: 10px;
 }
-
 
 .review-recommendation {
   display: flex;
