--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -423,3 +423,41 @@ a {
     text-align: center;
     padding-right: 8px;
 }
+
+#search_bar_extra_div {
+    display: flex;
+    text-align: center;
+    padding-top: 1px;
+    width: 720px;
+    color: #d9d9d9;
+    overflow: hidden;
+    font-size: 13px;
+    line-height: 34px;
+    text-shadow: 0px 2px 3px rgb(0 0 0 / 30%);
+    font-weight: bold;
+    white-space: nowrap;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#search_bar_profilepic_div {
+    position: relative;
+    padding-top: 5px;
+}
+
+#profile_pic_search_bar {
+    width: 24px;
+    height: 24px;
+}
+
+#search_bar_welcome_msg {
+    height: 35px;
+    text-overflow: clip;
+    overflow: hidden;
+    max-width: 300px;
+}
+
+#plus {
+    padding-top: 1px;
+    height: 26px;
+    width: 26px;
+}
