--- a/react-app/src/components/Games/GameDetail.css
+++ b/react-app/src/components/Games/GameDetail.css
@@ -70,6 +70,19 @@
     overflow-y: hidden;
 }
 
+div#scroll_container::-webkit-scrollbar {
+    width: 12px;
+}
+
+div#scroll_container::-webkit-scrollbar-track {
+    background-color: rgba( 0, 0, 0, 0.2 );
+}
+
+div#scroll_container::-webkit-scrollbar-thumb {
+    background-color: rgba(2, 91, 164, 0.4);
+    box-shadow: inset 0 0 6px rgba(199, 192, 192, 0.5);
+}
+
 #scroll_div {
     display: flex;
     flex-direction: row;
