link to game creation page

--- a/react-app/src/components/Games/GameDetail.css
+++ b/react-app/src/components/Games/GameDetail.css
@@ -71,7 +71,7 @@
 }
 
 div#scroll_container::-webkit-scrollbar {
-    width: 12px;
+    height: 10px;
 }
 
 div#scroll_container::-webkit-scrollbar-track {
