--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Motiva Sans;
+    src: url("../../public/fonts/Motiva-Sans-Bold.ttf");
+  }
+
 #main {
     width: 100%;
     height: 100%;
@@ -460,4 +465,26 @@ a {
     padding-top: 1px;
     height: 26px;
     width: 26px;
+}
+
+#game_creation_div {
+    white-space: pre-line;
+    font-family: "Motiva Sans", Sans-serif;
+    text-decoration: none;
+    color: white;
+    padding-top: 20px;
+    height: 90px;
+    width: 150px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../../public/static/images/tiltedvaporworks.png");
+}
+
+#game_creation_div h3 {
+    font-family: "Motiva Sans", Sans-serif;
+    font-weight: 600;
+}
+
+#game_creation_div:hover {
+    color: #66c0f4;
 }
