--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -475,7 +475,7 @@ a {
     padding-top: 20px;
     height: 90px;
     width: 150px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image: url("../../public/static/images/tiltedvaporworks.png");
 }
