--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -525,3 +525,8 @@ a {
     width: 300px;
     justify-content: space-between;
 }
+
+#content_sub_genre {
+    display: flex;
+    justify-content: center;
+}
