--- a/react-app/src/components/Carts/index.css
+++ b/react-app/src/components/Carts/index.css
@@ -273,7 +273,8 @@
 #is-active-total-bttns:hover {
   color: #ffffff !important;
   background: linear-gradient( to bottom, rgba(121,153,5,1) 100%, rgba(83,105,4,1) 95%);
-  opacity: 100%
+  cursor: pointer;
+  /* opacity: 100% */
 }
 
 .inside-div {
