pointed for scrollbar

--- a/react-app/src/components/Games/GameDetail.css
+++ b/react-app/src/components/Games/GameDetail.css
@@ -76,6 +76,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     margin-bottom: 5px;
+    cursor: pointer;
 }
 
 div#scroll_container::-webkit-scrollbar {
