--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -32,10 +32,6 @@
     justify-content: center;
 }
 
-#header_content {
-    max-height: 390px;
-}
-
 #going_rogue_video {
     width: 100%;
     height: 100%;
@@ -307,7 +303,7 @@ a {
     color: #c6d4df;
     font-size: 12px;
     width: 100%;
-    height: 835px;
+    height: 90vh;
     display: flex;
     justify-content: center;
 }
