--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -32,3 +32,10 @@ body {
     line-height: 16px;
     text-align: center;
   }
+
+
+@media (max-width: 1440px) {
+    #footer {
+        margin-bottom: -69px !important;
+    }
+  }
