--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,13 +9,13 @@ body {
     padding: 0;
 }
 
-@media (min-width: 1921px) {
+/* @media (min-width: 1921px) {
     body {
         margin: 0;
         padding: 0;
         max-width: 1920px;
     }
-  }
+  } */
 
 #footer {
     font-family: Arial, Helvetica, sans-serif;
