--- a/react-app/src/components/MainPage/index.css
+++ b/react-app/src/components/MainPage/index.css
@@ -28,6 +28,9 @@
     #game_list_content {
         margin-left: 150px;
     }
+    #header_content {
+        height: 205px;
+    }
 }
 
 #main_page_content {
